[package]
name = "xitca-io"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
description = "async network io types and traits"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["xitca", "xitca-web"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"

[features]
default = []
# tokio runtime support
runtime = ["tokio", "tokio-uring-xitca/runtime"]
# tokio-uring runtime support
runtime-uring = ["runtime", "tokio-uring-xitca/runtime-uring"]
# quic support
quic = ["dep:quinn", "runtime"]

[dependencies]
xitca-unsafe-collection = { workspace = true, features = ["bytes"] }

bytes = { workspace = true }
# Always required for its buffer traits (BoundedBuf, BoundedBufMut, etc.)
# and completion-based IO trait definitions. The io-uring runtime itself is
# NOT enabled unless the `runtime-uring` feature is activated.
tokio-uring-xitca = { workspace = true, features = ["bytes"] }

quinn = { version = "0.11", features = ["ring"], optional = true }
tokio = { workspace = true, features = ["net"], optional = true }
