[package]
name = "xitca-postgres"
version = "0.1.0"
edition = "2021"

[features]
# feature for single thread client that have lower overhead(no lock) at the cost of no thread safety.
single-thread = []
# feature for connecting to tls enabled server.
tls = ["xitca-tls/rustls-ring-crypto", "sha2", "webpki-roots"]
# feature for using quic as client/server transport layer for better congetion handling on lossy connection.
# note: it does not work as stand alone and server side proxy for translating quic message to tcp is needed.
quic = ["quinn", "rustls-pemfile", "tls"]
# feature for using tokio_uring as IO reactor.
io-uring = ["xitca-io/runtime-uring"]

[dependencies]
xitca-io = { version = "0.3.0", features = ["runtime"] }
xitca-service = "0.1"
xitca-unsafe-collection = { version = "0.1", features = ["bytes"] }

fallible-iterator = "0.2"
percent-encoding = "2"
postgres-protocol = "0.6.5"
postgres-types = "0.2"
tokio = { version = "1.30", features = ["net", "rt", "sync", "time"] }
tracing = { version = "0.1.40", default-features = false }

# tls
sha2 = { version = "0.10.8", optional = true }
webpki-roots = { version = "0.26", optional = true }
xitca-tls = { version = "0.3.0", optional = true }

# quic
quinn = { version = "0.11", git = "https://github.com/quinn-rs/quinn.git", features = ["ring"], optional = true }
rustls-pemfile = { version = "2", optional = true }

[dev-dependencies]
rcgen = "0.13"
tokio = { version = "1.30", features = ["macros", "rt"] }
