[package]
name = "xitca-postgres"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "an async postgres client"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["xitca-web", "database", "postgres", "sql", "async"]
categories = ["database"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"

[lints]
workspace = true

[features]
# feature for connecting to tls enabled server.
tls = ["dep:xitca-tls", "xitca-tls/rustls-ring-crypto", "dep:sha2", "dep:webpki-roots"]

# feature for using quic as client/server transport layer for better congetion handling on lossy connection.
# note: it does not work as stand alone and server side proxy for translating quic message to tcp is needed.
quic = ["dep:quinn", "dep:rustls-pemfile", "tls"]

# compatibility feature to enable implements with `futures` crate
compat = []

[dependencies]
xitca-io = { version = "0.4.1", features = ["runtime"] }
xitca-unsafe-collection = { version = "0.2.0", features = ["bytes"] }

fallible-iterator = "0.2"
futures-core = { version = "0.3", default-features = false }
percent-encoding = "2"
postgres-protocol = "0.6.5"
postgres-types = "0.2"
tokio = { version = "1.30", features = ["rt", "sync"] }
tracing = { version = "0.1.40", default-features = false }

# tls
sha2 = { version = "0.10.8", optional = true }
webpki-roots = { version = "0.26", optional = true }
xitca-tls = { version = "0.4.0", optional = true }

# quic
quinn = { version = "0.11", features = ["ring"], optional = true }
rustls-pemfile = { version = "2", optional = true }

[dev-dependencies]
xitca-postgres-codegen = "0.1"
bb8 = "0.8.5"
futures = { version = "0.3", default-features = false }
postgres-derive = "0.4"
postgres-types = { version = "0.2", features = ["with-uuid-1"] }
rcgen = "0.13"
tokio = { version = "1.30", features = ["macros", "rt-multi-thread", "time"] }
uuid = "1"
