[package]
name = "xitca-router"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "router for xitca"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["xitca", "xitca-web"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
alloc = []

[dependencies]
xitca-unsafe-collection = "0.2.0"

[dev-dependencies]
criterion = "0.7"
matchit = "0.9.1"

[[bench]]
name = "bench"
harness = false
