[package]
name = "xitca-router"
version = "0.4.3"
edition = "2024"
license = "MIT"
description = "router for xitca"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["xitca", "xitca-web"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"
rust-version.workspace = true

[lints]
workspace = true

[features]

[dependencies]
xitca-unsafe-collection = { workspace = true }

[dev-dependencies]
criterion = "0.8"
matchit = "0.9.1"

[[bench]]
name = "bench"
harness = false
