[package]
name = "xitca-server"
version = "0.6.1"
edition = "2024"
license = "Apache-2.0"
description = "http server for xitca"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["xitca", "xitca-web"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"
rust-version.workspace = true

[features]
# server implementation of quic
quic = ["xitca-io/quic"]
# server implementation on tokio-uring runtime.
io-uring = ["dep:tokio-uring-xitca"]

[dependencies]
xitca-io = { version = "0.5.1", features = ["runtime"] }
xitca-service = { version = "0.3.0", features = ["alloc"] }
xitca-unsafe-collection = "0.2.0"

tokio = { version = "1.48", features = ["sync", "time"] }
tokio-util = "0.7.13"
tracing = { version = "0.1.40", default-features = false }

# io-uring support
tokio-uring-xitca = { version = "0.1.1", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
socket2 = { version = "0.6.0" }
tokio = { version = "1.48", features = ["rt-multi-thread", "signal"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.48", features = ["rt"] }

[dev-dependencies]
bytes = "1.4"
tokio = { version = "1.48", features = ["io-util", "macros"] }
