[package]
name = "xitca-server"
version = "0.7.0"
edition = "2024"
license = "Apache-2.0"
description = "http server for xitca"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["xitca", "xitca-web"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"
rust-version.workspace = true

[features]
# server implementation of quic
quic = ["xitca-io/quic"]
# server implementation on tokio-uring runtime.
io-uring = ["dep:tokio-uring-xitca"]

[dependencies]
xitca-io = { workspace = true, features = ["runtime"] }
xitca-service = { workspace = true, features = ["alloc"] }
xitca-unsafe-collection = "0.2.0"

tokio = { workspace = true, features = ["sync", "time"] }
tracing = { version = "0.1.40", default-features = false }

# io-uring support
tokio-uring-xitca = { workspace = true, features = ["runtime-uring"], optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
socket2 = { version = "0.6.0" }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
bytes = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros"] }
