[package]
name = "xitca-service"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
description = "async traits for xitca"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["xitca", "xitca-web"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"

[lints]
workspace = true

[features]
alloc = []

[dev-dependencies]
xitca-unsafe-collection = "0.2.0"
