[package]
name = "xitca-test"
version = "0.1.0"
edition = "2021"

[features]
io-uring = ["xitca-http/io-uring", "xitca-server/io-uring"]

[dependencies]
xitca-client = { version = "0.1", features = ["http2", "http3", "websocket", "dangerous"] }
xitca-http = { version = "0.5", features = ["http2", "http3"] }
xitca-codegen = "0.2"
xitca-io = "0.3.0"
xitca-server = { version = "0.3", features = ["quic"] }
xitca-service = "0.1"
xitca-unsafe-collection = "0.1.1"
xitca-web = "0.5"

http-ws = { version = "0.3", features = ["stream"] }

async-stream = "0.3"
futures-util = "0.3.17"
h3-quinn = "0.0.5"
rustls = "0.21"
rustls-pemfile = "1"
tokio = { version = "1.30", features = ["macros", "rt"] }
