[package]
name = "xitca-tls"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
description = "tls utility for xitca"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["xitca", "xitca-web"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"

[features]
openssl = ["dep:openssl"]
rustls = ["rustls_crate/default"]
rustls-ring-crypto = ["rustls_crate/ring"]
rustls-uring = ["rustls_crate/default", "xitca-io/runtime-uring"]

[dependencies]
xitca-io = { version = "0.2.1", features = ["runtime"] }

rustls_crate = { package = "rustls", version = "0.23", default-features = false, optional = true }
openssl = { version = "0.10", optional = true }
