[package]
name = "xitca-tls"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
description = "tls utility for xitca"
repository = "https://github.com/HFQR/xitca-web"
keywords = ["xitca", "xitca-web"]
authors = ["fakeshadow <everestshadow@gmail.com>"]
readme= "README.md"

[features]
openssl = ["dep:openssl"]
openssl-poll = ["openssl", "xitca-io/runtime"]
native-tls = ["dep:native_tls_crate"]
native-tls-poll = ["dep:native_tls_crate", "xitca-io/runtime"]
# rustls with no default crypto provider
rustls = ["dep:rustls_crate"]
# rustls with aws-lc as crypto provider (default provider from `rustls` crate)
rustls-poll-aws-crypto = ["dep:rustls_crate", "rustls_crate/aws-lc-rs", "xitca-io/runtime"]
# rustls with ring as crypto provider
rustls-poll-ring-crypto = ["dep:rustls_crate", "rustls_crate/ring", "xitca-io/runtime"]

[dependencies]
xitca-io = { version = "0.6.0" }

native_tls_crate = { package = "native-tls", version = "0.2.7", features = ["alpn"], optional = true }
openssl = { version = "0.10", optional = true }
rustls_crate = { package = "rustls", version = "0.23", default-features = false, features = ["std", "tls12"], optional = true }
