[package]
name = "xitca-web"
version = "0.1.0"
edition = "2021"

[features]
default = ["http1"]

# extended http versions.
http1 = ["__server", "xitca-http/http1"]
http2 = ["__server", "xitca-http/http2"]
http3 = ["__server", "xitca-http/http3"]

# linux io-uring async io.
io-uring = ["__server", "xitca-server/io-uring"]

# tls transport layer
openssl = ["__server", "xitca-http/openssl", "openssl-crate"]
rustls = ["__server", "xitca-http/rustls", "rustls-crate"]

# params type extractor
params = ["serde"]

# json type extractor/respodner
json = ["serde", "serde_json"]

# urlencoded type extractor
urlencoded = ["serde", "serde_urlencoded" ]

# (de)compression middlewares
compress-br = ["http-encoding/br"]
compress-gz = ["http-encoding/gz"]
compress-de = ["http-encoding/de"]

# multipart type extractor
multipart = ["http-multipart"]

# websocket type extractor/responder
websocket = ["http-ws/stream", "tokio"]

# proc macro code generation
codegen = ["xitca-codegen"]

# experimental tower-http Layer compat
tower-http-compat = ["tower-service", "tower-layer", "http-body"]

# private http server feature
__server = ["xitca-http/runtime", "xitca-server"]

[dependencies]
xitca-http = { version = "0.1", features = ["util-service"], default-features = false }
xitca-service = { version = "0.1", features = ["alloc", "std"] }
xitca-unsafe-collection = "0.1"

futures-core = "0.3"
pin-project-lite = "0.2.9"

# http server
xitca-server = { version = "0.1", optional = true }

# openssl
openssl-crate = { package = "openssl", version = "0.10", optional = true }

# rustls
rustls-crate = { package = "rustls", version = "0.21", optional = true }

# params, json and urlencoded shared
serde = { version = "1", optional = true }

# json
serde_json = { version = "1", optional = true }

# urlencoded
serde_urlencoded = { version = "0.7.1", optional = true }

# compress-x
http-encoding = { version = "0.1", optional = true }

# multipart
http-multipart = { version = "0.1", optional = true }

# websocket
http-ws = { version = "0.1", optional = true }
tokio = { version = "1.30", features = ["rt", "sync", "time"], optional = true }

# codegen
xitca-codegen = { version = "0.1", optional = true }

# tower-http-compat
tower-service = { version = "0.3", optional = true }
tower-layer = { version = "0.3", optional = true }
http-body = { version = "0.4", optional = true }

[dev-dependencies]
xitca-codegen = { version = "0.1" }

futures-util = { version = "0.3", features = ["alloc"] }
serde = { version = "1.0.137", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["set-status"] }
