[package]
name = "xitca-client"
version = "0.1.0"
edition = "2021"

[features]
default = []
openssl = ["openssl-crate", "tokio-openssl"]
http2 = []

[dependencies]
ahash = "0.7.6"
bytes = "1"
futures-core = { version = "0.3.17", default-features = false, features =["alloc"] }
http = "0.2.5"
parking_lot = "0.11.2"
pin-project-lite = "0.2.7"
tokio = { version = "1.12", features = ["net", "rt", "parking_lot", "sync", "time"] }

# openssl support
openssl-crate = { package = "openssl", version = "0.10", optional = true }
tokio-openssl = { version = "0.6.3", optional = true }

[dev-dependencies]
tokio = { version = "1.12", features = ["macros"] }
