[package]
name = "xitca-client"
version = "0.1.0"
edition = "2021"

[features]
default = []
http2 = ["h2", "itoa", "xitca-http/http2"]
http3 = ["h3", "h3-quinn", "itoa", "async-stream"]
openssl = ["openssl-crate", "tokio-openssl"]
rustls = ["tokio-rustls", "webpki-roots"]
json = ["serde", "serde_json"]

[dependencies]
xitca-http = "0.1"
xitca-io = "0.1"

http-ws = "0.1"

ahash = "0.7.6"
base64 = "0.13.0"
futures-core = { version = "0.3.17", default-features = false, features =["alloc"] }
futures-util = { version = "0.3.17", default-features = false, features =["alloc", "sink"] }
httparse = "1.5.1"
parking_lot = "0.11.2"
pin-project-lite = "0.2.7"
rand = "0.8.4"
tokio = { version = "1.12", features = ["io-util", "net", "rt", "parking_lot", "sync", "time"] }
tokio-util = { version = "0.6", features = ["io"] }

# http/2 support
h2 = { version = "0.3.7", optional = true }

# http/3 support
h3 = { version = "0.0.0", optional = true }
h3-quinn = { version = "0.0.0", optional = true }
async-stream = { version = "0.3", optional = true }

# http/2 and http/3 shared
itoa = { version = "0.4.8", optional = true }

# openssl support
openssl-crate = { package = "openssl", version = "0.10", optional = true }
tokio-openssl = { version = "0.6.3", optional = true }

# rustls support
tokio-rustls = { version = "0.23", optional = true }
webpki-roots = { version = "0.22", optional = true }

# serde support
serde = { version = "1.0.130", default-features = false, optional = true }

# json support
serde_json = { version = "1", optional = true }

[dev-dependencies]
async-trait = "0.1.51"
tokio = { version = "1.12", features = ["macros"] }
